Make remove_after configurable, and set default to 30 days

--- a/mailroom.conf.sample
+++ b/mailroom.conf.sample
@@ -7,6 +7,7 @@
   },
   user => 1000,
   group => 1000,
+  remove_after_days => 30,
   auth => { # temporary authentication store
     'user' => 'passwd',
   },
